--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>module_3</title>
+  <title>gitclone</title>
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles4.css">
 </head>
 <body>
+  <h1>Git clone updating
+  </h1>
+  <h2 style="text-align:center">centering text using internal css</h2>
   <header>
    <nav id="header-nav" class="navbar navbar-default">
      <div class="container">
@@ -23,15 +26,15 @@
         <a href="#" class="navbar-brand"><h1>Food, LLC</h1></a>
       </div><!-- /.nav-header -->
       <div id="menu-collapsable-nav" class="collapse navbar-collapse">
-        <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs text-center">      
-          <li>            
+        <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs text-center">
+          <li>
             <a href="#">Chicken</a>
           </li>
-          <li>            
+          <li>
            <a href="#">Beef</a>
          </li>
-         <li>            
-          <a href="#">Sushi</a>    
+         <li>
+          <a href="#">Sushi</a>
         </li>
       </ul>
     </div>
@@ -40,26 +43,26 @@
 <div class="container menu-container">
 
     <h1 class="text-center main-title">Our Menu</h1>
-  
+
   <div class="row">
 
-    <div class="col-lg-12 menu-item">     
+    <div class="col-lg-12 menu-item">
      <h4 class="menu-title text-center">Chicken</h4>
      <p class="text-justify">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
      </p>
    </div>
-   <div class="col-lg-12 menu-item">     
+   <div class="col-lg-12 menu-item">
      <h4 class="menu-title text-center">Beef</h4>
      <p class="text-justify">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
      </p>
    </div>
 
-   <div class="col-lg-12 menu-item">     
+   <div class="col-lg-12 menu-item">
      <h4 class="menu-title text-center">Sushi</h4>
      <p class="text-justify">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
      </p>
    </div>
  </div>
